force-app/main/default/objects/Price_Book_Entry__c/Price_Book_Entry__c.object-meta.xml
<CustomObject>
    <label>Price Book Entry</label>
    <nameField>
        <label>Price Book Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Book Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>