force-app/main/default/objects/Price_Book_Entry__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <label>Condition Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>