force-app/main/default/objects/Price_Book_Entry__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>