force-app/main/default/objects/Price_Book_Entry__c/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pricing_Group__c.Type__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pricing_Group__c</referenceTo>
    <relationshipLabel>Price Book Entries (Pricing Group)</relationshipLabel>
    <relationshipName>Price_Book_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>