force-app/main/default/objects/Price_Book_Entry__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <label>MRP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>