force-app/main/default/objects/Price_Book_Entry__c/fields/Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Unit__c</fullName>
    <label>Pricing Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>