force-app/main/default/objects/Price_Book_Entry__c/fields/PTD__c.field-meta.xml
<CustomField>
    <fullName>PTD__c</fullName>
    <label>PTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>