force-app/main/default/objects/Price_Book_Entry__c/fields/PTD_Margin__c.field-meta.xml
<CustomField>
    <fullName>PTD_Margin__c</fullName>
    <label>PTD Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>