force-app/main/default/objects/Price_Book_Entry__c/fields/PTR__c.field-meta.xml
<CustomField>
    <fullName>PTR__c</fullName>
    <label>PTR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>