force-app/main/default/objects/Price_Book_Entry__c/fields/PTSS__c.field-meta.xml
<CustomField>
    <fullName>PTSS__c</fullName>
    <label>PTSS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>