force-app/main/default/objects/Price_Book_Entry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Distributor</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Super Stockist</fullName>
            </value>
            <value>
                <fullName>Stash</fullName>
            </value>
            <value>
                <fullName>Retailor</fullName>
                <isActive>false</isActive>
                <label>Retailor</label>
            </value>
            <value>
                <fullName>Under Super Stockist</fullName>
                <isActive>false</isActive>
                <label>Under Super Stockist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>